# gemini-mcp

./: .env.example  .gitignore  CLAUDE.md  EXAMPLES.md  README.md  SPECKIT_PLAN_RESEARCH_GUIDE.md  generate_config.sh  main.py  pyproject.toml  requirements.txt  server.py  test_bug_fixes.py
.specify/memory/: constitution.md
.specify/specs/001-hybrid-deep-research/: spec.md
deep_research/: __init__.py  background.py  cost_estimator.py  engine.py  hanging_detector.py  notification.py  state_manager.py  storage.py
deep_research/templates/: research_report.md.j2
docs/: gcloud-genai-cheatsheet.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
prd/: MARKDOWN_PERSISTENCE_ADDENDUM.md  NATIVE_OS_NOTIFICATIONS_ADDENDUM.md  README.md
specs/001-hybrid-deep-research/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-hybrid-deep-research/contracts/: tools.md
tests/integration/: test_async_flow.py  test_cancel_flow.py  test_deep_research_flow.py
