[project]
name = "claude-code-gemini-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=0.3.0",
    "mcp[cli]>=1.9.4",
    "python-dotenv>=1.1.0",
    "grpcio>=1.62.0,<1.70.0",
    "grpcio-status>=1.62.0,<1.70.0",
]
