[project]
name = "claude-code-gemini-mcp"
version = "3.7.0"
description = "Gemini MCP Server - AI collaboration tools for Claude Code"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.55.0",
    "fastmcp>=2.0.0",
    "python-dotenv>=1.1.0",
    "grpcio>=1.62.0,<1.70.0",
    "grpcio-status>=1.62.0,<1.70.0",
    "notify-py>=0.3.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_default_fixture_loop_scope = "function"
